--- a/package.json
+++ b/package.json
@@ -9,10 +9,11 @@
   "dependencies": {
     "bcrypt": "^5.0.0",
     "cookie-parser": "^1.4.5",
+    "datenv": "0.0.0",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
     "hbs": "^4.1.1",
-    "mongoose": "5.11.15",
+    "mongoose": "^5.11.15",
     "morgan": "^1.10.0",
     "serve-favicon": "^2.5.0"
   },
